--- a/Views/Nota/Delete.cshtml
+++ b/Views/Nota/Delete.cshtml
@@ -1,14 +1,29 @@
 ﻿@model MonolitoTaller.Models.Entities.Nota
 
-<h2>Eliminar Nota</h2>
+@{
+    ViewBag.Title = "Eliminar Nota";
+}
 
-<p>¿Estás seguro que deseas eliminar esta nota?</p>
+<h2>¿Estás seguro de que deseas eliminar esta nota?</h2>
 
-<ul>
-    <li><strong>Estudiante:</strong> @Model.IdEstudiante</li>
-    <li><strong>Asignatura:</strong> @Model.IdAsignatura</li>
-    <li><strong>Valor:</strong> @Model.Valor</li>
-</ul>
+<div>
+    <dl class="row">
+        <dt class="col-sm-3">ID</dt>
+        <dd class="col-sm-9">@Model.Id</dd>
+
+        <dt class="col-sm-3">ID Estudiante</dt>
+        <dd class="col-sm-9">@Model.IdEstudiante</dd>
+
+        <dt class="col-sm-3">ID Asignatura</dt>
+        <dd class="col-sm-9">@Model.IdAsignatura</dd>
+
+        <dt class="col-sm-3">Nota</dt>
+        <dd class="col-sm-9">@Model.Valor</dd>
+
+        <dt class="col-sm-3">Fecha</dt>
+        <dd class="col-sm-9">@Model.FechaRegistro.ToShortDateString()</dd>
+    </dl>
+</div>
 
 <form asp-action="DeleteConfirmed" method="post">
     <input type="hidden" asp-for="Id" />
