--- a/Views/Nota/Create.cshtml
+++ b/Views/Nota/Create.cshtml
@@ -8,21 +8,37 @@
 
 <form asp-action="Create" method="post">
     <div class="form-group">
-        <label asp-for="IdEstudiante">ID Estudiante</label>
-        <input asp-for="IdEstudiante" class="form-control" />
+        <label asp-for="IdEstudiante">Estudiante</label>
+        <select asp-for="IdEstudiante" class="form-control" asp-items="ViewBag.Estudiantes">
+            <option value="">Seleccione un estudiante</option>
+        </select>
+        <span asp-validation-for="IdEstudiante" class="text-danger"></span>
     </div>
+
     <div class="form-group">
-        <label asp-for="IdAsignatura">ID Asignatura</label>
-        <input asp-for="IdAsignatura" class="form-control" />
+        <label asp-for="IdAsignatura">Asignatura</label>
+        <select asp-for="IdAsignatura" class="form-control" asp-items="ViewBag.Asignaturas">
+            <option value="">Seleccione una asignatura</option>
+        </select>
+        <span asp-validation-for="IdAsignatura" class="text-danger"></span>
     </div>
+
     <div class="form-group">
         <label asp-for="Valor">Nota</label>
         <input asp-for="Valor" class="form-control" />
+        <span asp-validation-for="Valor" class="text-danger"></span>
     </div>
+
     <div class="form-group">
         <label asp-for="FechaRegistro">Fecha</label>
         <input asp-for="FechaRegistro" class="form-control" type="date" />
+        <span asp-validation-for="FechaRegistro" class="text-danger"></span>
     </div>
+
     <button type="submit" class="btn btn-success">Guardar</button>
     <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
 </form>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
