--- a/Views/Nota/Index.cshtml
+++ b/Views/Nota/Index.cshtml
@@ -1,37 +1,39 @@
-﻿@model IEnumerable<MonolitoTaller.Models.Entities.Nota>
+﻿@model List<MonolitoTaller.Models.Entities.Nota>
 
 @{
-    ViewBag.Title = "Notas";
+    ViewBag.Title = "Notas Registradas";
 }
 
 <h2>Listado de Notas</h2>
 
 <p>
-    <a asp-action="Create" class="btn btn-primary">Registrar nueva nota</a>
+    <a asp-action="Create" class="btn btn-success">Registrar nueva nota</a>
 </p>
 
-<table class="table table-bordered table-striped">
+<table class="table">
     <thead>
         <tr>
+            <th>ID</th>
             <th>ID Estudiante</th>
             <th>ID Asignatura</th>
-            <th>Valor</th>
-            <th>Fecha de Registro</th>
-            <th></th>
+            <th>Nota</th>
+            <th>Fecha</th>
+            <th>Acciones</th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var n in Model)
+        @foreach (var item in Model)
         {
             <tr>
-                <td>@n.IdEstudiante</td>
-                <td>@n.IdAsignatura</td>
-                <td>@n.Valor</td>
-                <td>@n.FechaRegistro.ToShortDateString()</td>
+                <td>@item.Id</td>
+                <td>@item.IdEstudiante</td>
+                <td>@item.IdAsignatura</td>
+                <td>@item.Valor</td>
+                <td>@item.FechaRegistro.ToShortDateString()</td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@n.Id">Editar</a> |
-                    <a asp-action="Details" asp-route-id="@n.Id">Detalles</a> |
-                    <a asp-action="Delete" asp-route-id="@n.Id">Eliminar</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Detalles</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
                 </td>
             </tr>
         }
